# LM-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  DESIGN.md  LICENSE  README.md  conanfile.txt  conanws.base.yml  init.py  layout_cmake
lmeditor/: CMakeLists.txt  conanfile.py
lmeditor/include/lmeditor/: command.h  command_help.h  inspector.h  map_editor.h  map_editor_events.h  map_selector.h  mesh_editor.h  project_plugin.h  save_load_pose.h  simulation.h  simulation_plugin.h  tool_panel.h  widget_panel_wrapper.h
lmeditor/src/: main.cpp  map_selector.cpp  project_plugin.cpp  save_load_pose.cpp
lmeditor/src/app/: app.cpp  app.h  entity_list_handle.cpp  inspector_handler.cpp  layout.cpp  map_editor_handler.cpp  map_saver.cpp  map_saver.h  resources.cpp  resources.h  save_load.cpp  save_load_map.cpp  save_load_pose.cpp  saver.cpp  saver.h
lmeditor/src/axes3d/: axes3d.h
lmeditor/src/command_help/: command_help.cpp
lmeditor/src/component/: component_adder.cpp  player.cpp
lmeditor/src/editable_mesh/: editable_mesh.cpp  editable_mesh.h  editable_mesh_geometry.cpp  editable_mesh_rendering.cpp
lmeditor/src/entity_list/: entity_list.cpp  entity_list.h  view.cpp  view.h
lmeditor/src/inspector/: add_state.cpp  inspector.cpp  inspector.h
lmeditor/src/map_editor/: add_to_frame.cpp  map_editor.cpp  map_editor.h
lmeditor/src/mesh_editor/: mesh_editor.cpp  mesh_editor.h  mesh_editor_hit_testing.cpp  mesh_editor_move_geometry.cpp  test_mesh_editor.h
lmeditor/src/model/: orbital_camera.cpp  selection.cpp
lmeditor/src/shaders/: selection_outline.frag  stencil.vert
lmeditor/src/trimesh/: trimesh.cpp  util.h
lmeditor/src/viewport/: orbital_camera.cpp  viewport.cpp  viewport.h
lmeditor/test/: test_entity_list.cpp  test_lmeditor.cpp  test_pose.cpp  test_trimesh.cpp
lmeditor/test/entity_editor/: test.cpp  test_case.h  test_move_selection.cpp
lmeditor/test/map_editor/: map_editor_controller_test_case.h  model_test_case.h  test.cpp  test_copy_entity.cpp  test_move_selection.cpp
lmeditor/test/visual_registry_editor/: test.cpp  test_case.h  test_move_selection.cpp
lmengine/: CMakeLists.txt  conanfile.py
lmengine/include/lmengine/: camera.h  extents.h  kinematic.h  name.h  named_type.h  physics.h  pose.h  reflection.h  serialisation.h  shapes.h  simulation.h  transform.h
lmengine/src/: animation.cpp  extents.cpp  name.cpp  pose.cpp  reflection.cpp  serialisation.cpp  test_transform.cpp  transform.cpp
lmengine/src/bullet_physics/: bullet_physics.cpp  bullet_physics.h  character_controller.h
lmengine/test/: test_lmengine.cpp  test_pose.cpp  test_transform_hierarchy_visit.cpp
lmgl/: CMakeLists.txt  conanfile.py
lmgl/include/lmgl/: buffer.h  element.h  frame.h  fwd_decl.h  geometry.h  lmgl.h  material.h  mock_lmgl.h  renderer.h  resource_sink.h  stage.h  texture.h
lmgl/src/: create_renderer.cpp  resource_sink.cpp
lmgl/src/vulkan/: material.cpp  material.h  stage_helpers.cpp  stage_helpers.h  vulkan_debug_report_ext.cpp  vulkan_element.h  vulkan_exceptions.cpp  vulkan_exceptions.h  vulkan_frame.cpp  vulkan_frame.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_texture_stage.cpp  vulkan_texture_stage.h  vulkan_window_stage.cpp  vulkan_window_stage.h
lmgl/test_package/: CMakeLists.txt  test_lmlib_package.cpp
lmhuv/: CMakeLists.txt  conanfile.py
lmhuv/include/: lmhuv.h
lmhuv/include/lmhuv/: box.h  trimesh.h
lmhuv/src/: box.cpp  visual.cpp  visual.h
lmhuv/src/rendering/: shapes.cpp  shapes.h
lmhuv/src/shaders/: box.vert  box_flat.frag  box_instanced.frag  box_instanced.vert
lmhuv/src/trimesh/: test_trimesh.cpp  trimesh.cpp  util.h
lmlib/: .appveyor.yml  .travis.yml  CMakeLists.txt  Dockerfile  conanfile.py  embed-resource.cmake  local_ci.py
lmlib/cmake/: cpp_standard.cmake  dependencies.cmake  download_project.cmake  exe_properties.cmake
lmlib/include/lmlib/: Resource.h  application.h  array_proxy.h  array_size.h  camera.h  concat.h  eigen.h  enumerate.h  flow_graph.h  geometry.h  internal_fsm.h  intersection.h  math_constants.h  range.h  realtime_clock.h  reference.h  remote_executor.h  rotation_matrix.h  test_utils.h  tuple_index.h  variant_visitor.h  worker_thread.h
lmlib/src/: embedresource-cpp-11.cpp
lmlib/src/geometry/: frustum.cpp  intersection.cpp  test_geometry.cpp
lmlib/src/graphics/: camera.cpp
lmlib/src/util/: remote_executor.cpp  test_util.cpp
lmlib/test/: test_intersection.cpp
lmlib/test_package/: test_lmlib_package.cpp
lmng/: CMakeLists.txt  conanfile.py
lmng/include/lmng/: animation.h  archetype.h  asset_cache.h  camera.h  hierarchy.h  logging.h  name.h  physics.h  reflection.h  serialisation.h  shapes.h  simulation.h  transform.h  yaml_save_load.h
lmng/src/: animation.cpp  any_component.cpp  archetype.cpp  asset_cache.cpp  context.cpp  extents.cpp  hierarchy.cpp  logging.cpp  name.cpp  pose.cpp  reflect_component.cpp  reflection.cpp  serialisation.cpp  transform.cpp  yaml_save_load.cpp
lmng/src/bullet_physics/: bullet_physics.cpp  bullet_physics.h  bullet_util.h  constraints.cpp  (+4 more)
lmng/test/: asset_cache.h  test_archetype.cpp  test_hierarchy.cpp  test_lmng.cpp  test_pose.cpp  test_transform.cpp  test_transform_hierarchy_visit.cpp
lmpl/: .gitignore  CMakeLists.txt  conanfile.py
lmpl/conan-config/: remotes.txt
lmpl/src/: keyboard.cpp  mock_lmpl.cpp
lmpl/test_package/: CMakeLists.txt  conanfile.py  test_lmlib_package.cpp
lmtk/: CMakeLists.txt  conanfile.py
lmtk/example/: CMakeLists.txt  lmtk_example.h  rect_border.cpp  text_layout.cpp
lmtk/src/: app.cpp  app_flow_graph.cpp  char_field.cpp  choice_list.cpp  event.cpp  input_event.cpp  lmtk.cpp  rect_border.cpp  resource_cache.cpp  resource_sink.cpp  shapes.cpp  text_editor.cpp  text_layout.cpp  text_line_selector.cpp
sample/: .gitignore  CMakeLists.txt  character_movement.lmap  conanfile.py  lmproj.yml  neutral.lpose  rigid_bodies_battle.lmap  swing_arms.lmanim
sample/src/: application.cpp  application.h  editor_plugin.cpp  reflect_types.cpp  reflection.cpp  reflection.h  standalone.cpp
(+227 files in other folders)
